# thtr_bachelor_ws

./: .gitignore  .gitmodules  HandEye_Calibration_Results.md  README.md  calibrationtutorial.md  frames.gv
CAD files/: CAD_files.md  Custom_3Dprint_tools.step
logs/realsense2_camera/: build.make.000.log.stderr  build.make.001.log.stderr
logs/tht_depthai/: build.cmake.001.log.stderr  build.make.000.log.stderr
logs/ur_kinematics/: build.make.000.log.stderr  build.make.002.log.stderr
logs/ur_robot_driver/: build.cmake.000.log.stderr  build.make.000.log.stderr
markers/: markers.md
plots/: plot_poses.py  plots.md
src/hand_eye/: CMakeLists.txt  package.xml
src/info_launch_ws/: NoyceWorkspace.rviz  readme.md  tht_noyce_bringup.launch  tht_viewrviz.launch
src/motion_pkg/: CMakeLists.txt  package.xml
src/tht_bachelor_ur_launch/: CMakeLists.txt  package.xml
src/tht_depthai/: CMakeLists.txt  nodelet_plugins.xml  (+2 more)
src/tht_robot_env/: CMakeLists.txt  README.md  package.xml
src/tht_robot_env/config/: bachelor1.rviz  viewrobottf.rviz
src/tht_robot_env/launch/: display.launch.py  load_rosparam_camcalib.launch  load_rosparam_pointer.launch  load_rosparam_robot_description.launch  load_rosparam_robot_description_wpointer.launch  marker_flip_y_axis.launch  oslomet_bachelor_bringup.launch  oslomet_load_rosparam_camcalib.launch  tf_pub.launch  tht_bachelor_bringup.launch  tht_bachelor_bringup_wpointer.launch  tht_load_ur.launch  tht_load_ur10eworkspace.launch  tht_noyce_bringup.launch  tht_view_ur10eworkspace.launch  tht_viewrviz.launch
src/tht_robot_env/meshes/: Gripper_Desing_1.STL  Gripper_Desing_2.STL  Pointer-tool.stl  R24_2finger_20mm.STL  camera_calib_A4_Tool.dae  camera_calib_A4_Tool.stl  camera_calib_A4_Tool_old.dae  pointer_tool.dae  topbit.stl
src/tht_robot_env/meshes/Old tools/: camera_calib_A4_Tool_old2.dae  camera_calib_A4_Tool_old2.stl
src/tht_robot_env/scripts/: calib_cartis.py  calib_test copy.py  calib_test.py  marker_tf_transformer.py  move_menu copy 2.py  move_menu copy.py  move_menu.py  print_tf_pose.py  test_aruco copy.py
src/tht_robot_env/tests/: roslaunch_test_thtur10eworkspace.xml
src/tht_robot_env/urdf/: oslomet_ur.urdf.xacro  testur.urdf.xacro  ur.urdf.cameracalib.xacro  ur.urdf.pointer.xacro  ur.urdf.xacro  ur10e.urdf.xacro  ur_macro.xacro  ur_macro_cameracalib.xacro  ur_macro_pointer.xacro  ur_macro_test.xacro
src/tht_robot_env/urdf/inc/: ur_common.xacro  workspace_macro.xacro
src/tht_robot_env/urdf/inc/cameras/: cam_info.yaml  cam_info_cameracalib.yaml  fixed_camera.xacro  fixed_camera_bachelor.xacro  fixed_camera_cameracalib.xacro  gripper_camera.xacro
src/tht_robot_env/urdf/inc/workspaces/: space2_desc.xacro  tag_coords.yaml  workspace_macro.xacro
(+72 files in other folders)
