<?xml version="1.0"?>
<package format="2">
  <name>thtr_robot_env</name>
  <version>1.2.5</version>
  <description>
      URDF description for thtRobotics workspace
  </description>

  <author>Hassan Shehawy</author>
  <author>Revy</author>
  <maintainer email="hassan@thtrobotics.com">H. Shehawy</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
